- getAllPromos сука!!!!